--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,7 +52,7 @@ input[type=submit], .btn
 
 .information {
   background-color: white;
-  height: 95%;
+  height: auto;
 }
 
 section {
